projects/nex.rpi/src/apps/kube-system/live/production/gateway-default.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: traefik-gateway
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: nr.chezmoi.sh-websecure
      hostname: '*.nr.chezmoi.sh'
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.nr.chezmoi.sh-certificate
      allowedRoutes:
        namespaces:
          from: All
    - name: chezmoi.sh-websecure
      hostname: '*.chezmoi.sh'
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.nr.chezmoi.sh-certificate
      allowedRoutes:
        namespaces:
          from: All
